--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,3 +4,4 @@ github-username: yamasuto
 theme: jekyll-theme-cayman
 plugins:
   - jekyll-sitemap
+url: https://yamasuto.github.io/TamaKuma.github.io/
